<resources>
    <string name="app_name">起承</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>

    <string name="action_settings">Settings</string>
    <string name="qi">起</string>
    <string name="cheng">承</string>
    <string name="hot">热门</string>
    <string name="latest">最新</string>
    <string name="tags">标签</string>
    <string name="new_tale">新故事</string>
    <string name="follow_tale">续写故事</string>
    <string name="tale">故事</string>
    <string name="forall">全民</string>
    <string name="group">小组</string>
    <string name="notice">消息</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>
    <string name="about">关于</string>
    <string name="reward">打赏</string>
    <string name="discuss">吐槽</string>
    <string name="create_group_statement">声明\n创建小组后，你将享有以下权利：\n  1、邀请他人加入小组\n  2、编写私密的、受保护的故事\n  3、退出或重新加入小组\n同时，你必须：\n  1、进行合法言论\n  2、确保小组成员平等享有著作权\n 3、和其他组员同等承担法律责任\n以上。</string>
    <string name="long_text">清晨，空气有点凉，鼻子冻的红红的，吸一口冷气，立即就干咳几声。“多穿点，今天有雪呢，晚上早点回来，我给你烧热水，哎，对了上班把我昨晚刚给你织好的围巾围上，会暖和点。”话音刚落，妈妈就从屋里走出来，一双干燥带着裂口的手里拿着一条粉白色的围巾，我的眼睛顿时亮了一下，从未见过这么漂亮的围巾，妈妈是什么时候织的，怎么就没留意呢？一会儿，这条美丽的围巾就揽在了我的脖颈上，这使我又添了一份动人的温暖。

　　妈妈不知道我这次可能会永远不回来了，我要去追寻我的爱，我的他是外乡的，父母一直反对我们，也许是担忧以后不能经常看到我了，但我执着，坚持着这份渺茫的爱情，父亲说家和他，让我选择，经过一个月的痛苦挣扎，我选择了他，昨夜已悄悄将行装打理好，搁在了朋友家，准备今日就动身千里寻他，望着眼前日渐苍老的妈妈，望着脖颈上这条可能是妈妈连夜赶织出来的围巾，我差点就反悔了，妈妈，永远是最爱我的，知道今年的第一场雪即将来临，怕我冷啊！可是，妈妈，我只有把这爱放在心底，因为他还在等我！

　　我没哭，低着头快速走出家门，生怕自己不争气的泪水会淌下，妈妈也紧跟出来目送我，和往常一样叮嘱我早些回来！我没有回来，我没有勇气再看一眼妈妈寻饱经风霜的脸，不知她看到我留的绝别信会是怎样的痛心。

　　我夹紧棉袄向朋友家走去，已经有些风了，路边的一排排杨树，一派萧条，此刻，这些树在我眼里也悲伤起来了，别了，我会想你们的！
</string>

</resources>
