<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/id_switch_tab_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >



            <LinearLayout
                android:id="@+id/main_heat_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/main_heat_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hot"
                    android:textColor="@color/brown"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_latest_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/main_latest_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/latest"
                    android:textColor="@color/migold"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_tags_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/main_tags_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tags"
                    android:textColor="@color/migold"
                    android:textSize="16sp" />
            </LinearLayout>



        </LinearLayout>

        <ImageView
            android:id="@+id/id_tab_line_iv"
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:contentDescription="tab"
            android:background="@drawable/flipper_selected" >
        </ImageView>

    </LinearLayout>


</LinearLayout>